[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tvclient"
version = "0.1.0"
description = "A caching library to accelerate tool calls in RL finetuning"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "flask>=3.1.2",
    "requests>=2.32.5",
]

[dependency-groups]
dev = [
    "pytest>=8.4.2",
]
